# python_final

./: .gitignore  README.md  docker-compose.yaml  pytest.ini  requirements.txt
app/: main.py
app/api/: deps.py  routes_auth.py
app/core/: config.py  exceptions.py  security.py
app/db/: models.py  session.py
app/repositories/: users.py
app/schemas/: auth.py  user.py
app/usecases/: auth.py
auth_service/: Dockerfile  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: deps.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  jwt_model.py  security.py
auth_service/app/db/: base.py  models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: auth.py  user.py
auth_service/app/usecases/: auth.py
auth_service/tests/: conftest.py
auth_service/tests/integration/: test_auth_http.py
auth_service/tests/unit/: test_security.py
bot_service/: .env.example  Dockerfile  pyproject.toml  pytest.ini
bot_service/app/: .dockerignore  main.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: chat_model.py  openrouter_client.py
bot_service/app/tasks/: llm_tasks.py
bot_service/tests/: conftest.py
bot_service/tests/integration/: test_openrouter_client.py
bot_service/tests/unit/: test_handlers.py  test_jwt.py
